Fixed most maraldi-introduced PMD complaints (need to check XXXManager singleton design)